--- a/index.html
+++ b/index.html
@@ -243,10 +243,12 @@
             <div class="career">
                 <h3>세무사 <b>한 국 현</b></h3>
                 <ul class="career-list">
-                    <li>광명시 부동산가격 공시위원회</li>
-                    <li>광명시 지방세 심의위원회</li>
+                    <li>광명시 부동산가격 공시위원회 위원</li>
+                    <li>광명시 지방세 심의위원회 위원</li>
                     <li>광명시 지방보조금관리위원회 부위원장</li>
                     <li>광명시법원 조정위원회 위원</li>
+                    <li>前) 광명세무서 국세심사위원회 위원</li>
+                    <li>前) 광명세무서 납세자보호위원회 위원</li>
                     <li>前) 광명상공회의소 감사 및 세무상담역</li>
                 </ul>
             </div>
